# TP_AyEdD

./: CMakeLists.txt  Install.md  README.md  p  p.cpp  programa  pruebas  pruebas.cpp  routers  routers.cpp  test  test.cpp
Include/: paquete.h  paquete.hpp  terminal.h
include/: Administrador.h  Pagina.h  Paquete.h  Router.h  Terminal.h
src/: Administrador.cpp  Pagina.cpp  Paquete.cpp  Router.cpp  Terminal.cpp  main.cpp  paquete.cpp  terminal.cpp
